Add projects with screenshots

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DIY Project App</title>
+  <title>Truong-Julie</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
 <body>
