Rehaul of foundation

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Truong-Julie</title>
+  <meta name="description" content="<FILL WITH SUMMARY>">
+  <meta name="author" content="Julie Truong">
+  <meta name="keywords" content="Julie, Truong, software, engineer, web, development, Node, Javascript, HTML5, CSS3, React, Angular, Node, Express, TDD">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./style/style.css">
