Update CSS, added images

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Truong-Julie</title>
+  <title>Julie Truong</title>
   <meta name="description" content="<FILL WITH SUMMARY>">
   <meta name="author" content="Julie Truong">
   <meta name="keywords" content="Julie, Truong, software, engineer, web, development, Node, Javascript, HTML5, CSS3, React, Angular, Node, Express, TDD">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Yellowtail" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
 <body>
