--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="../bundle/index.js"></script>
 </body>
 </html>
